.opsera-ai-tutor/k8s/overlays/dev/admin-config-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-config
spec:
  template:
    spec:
      containers:
        - name: admin-config
          image: 792373136340.dkr.ecr.us-west-2.amazonaws.com/opsera/ai-tutor-admin-config:dev-e9fd2ed-20260701180209
