.opsera-ai-tutor/k8s/overlays/dev/assessment-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assessment
spec:
  template:
    spec:
      containers:
        - name: assessment
          image: 792373136340.dkr.ecr.us-west-2.amazonaws.com/opsera/ai-tutor-assessment:dev-e9fd2ed-20260701180209
