.opsera-ai-tutor/k8s/overlays/dev/audit-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audit
spec:
  template:
    spec:
      containers:
        - name: audit
          image: 792373136340.dkr.ecr.us-west-2.amazonaws.com/opsera/ai-tutor-audit:dev-1c054e6-20260721212216
