.opsera-ai-tutor/k8s/overlays/dev/chat-orchestrator-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-orchestrator
spec:
  template:
    spec:
      containers:
        - name: chat-orchestrator
          image: 792373136340.dkr.ecr.us-west-2.amazonaws.com/opsera/ai-tutor-chat-orchestrator:dev-af80b3e-20260701122958
