.opsera-ai-tutor/k8s/overlays/dev/content-management-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-management
spec:
  template:
    spec:
      containers:
        - name: content-management
          image: 792373136340.dkr.ecr.us-west-2.amazonaws.com/opsera/ai-tutor-content-management:dev-dd56058-20260701124420
