.opsera-ai-tutor/k8s/overlays/dev/embedding-service-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: embedding-service
spec:
  template:
    spec:
      containers:
        - name: embedding-service
          image: 792373136340.dkr.ecr.us-west-2.amazonaws.com/opsera/ai-tutor-embedding-service:dev-55d32a6-20260721182741
