.opsera-ai-tutor/k8s/overlays/dev/rag-pipeline-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-pipeline
spec:
  template:
    spec:
      containers:
        - name: rag-pipeline
          image: 792373136340.dkr.ecr.us-west-2.amazonaws.com/opsera/ai-tutor-rag-pipeline:dev-dd56058-20260701124542
